--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "devDependencies": {
     "browser-sync": "^2.13.0",
     "del": "^2.2.1",
+    "fastclick": "^1.0.6",
     "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.5",
+    "gulp-cssnano": "^2.1.2",
     "gulp-if": "^2.0.1",
     "gulp-imagemin": "^3.0.1",
     "gulp-nunjucks-render": "^2.0.0",
     "gulp-sass": "^2.3.2",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.5.4",
     "gulp-useref": "^3.1.0",
-    "run-sequence": "^1.2.2"
+    "run-sequence": "^1.2.2",
+    "svgxuse": "^1.1.17"
   }
 }
